# PEA_project_1

./: Bruteforce.cpp  Bruteforce.h  CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Menu.cpp  Menu.h  SimulatingAnnealing.cpp  SimulatingAnnealing.h  main.cpp  tsp_10c.txt
